# Native-Plugin-Lib

./: Cargo.toml  README.md  cbindgen.toml
include/: bg3-plugin.h  bg3_plugin.h  plugin.h
src/: blob.rs  c.rs  dll.rs  lib.rs  rstr.rs
tests/: test_get_plugin_data.rs
