[package]
name = "native-plugin-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
konst = { version = "0.3.9", features = ["parsing"] }
pelite = "0.10.0"
eyre = "0.6.12"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Foundation", "Win32_System_SystemInformation"]
