[package]
name = "native-plugin-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
konst = { version = "0.3.16", features = ["parsing"] }
pelite = "0.10.0"
eyre = "0.6.12"
thiserror = "2.0.12"
byteorder = "1.5.0"
memchr = "2.7.4"

[dependencies.windows]
version = "0.61.1"
features = ["Win32_Foundation", "Win32_System_SystemInformation"]
