[package]
name = "native-plugin-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
konst = { version = "0.4.3", features = ["parsing"] }
pelite = "0.10.0"
eyre = "0.6.12"
thiserror = "2.0.17"
byteorder = "1.5.0"
memchr = "2.7.6"
yoke = { version = "0.8.1", features = ["derive"] }
stable_deref_trait = "1.2.1"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_Foundation", "Win32_System_SystemInformation"]
